# SAM-VST

./: .gitignore  CMakeLists.txt  README.md
plugin/: CMakeLists.txt
plugin/resources/: SAMVST-VST3-Info.plist  resource.h
plugin/src/: SAMBridge.cpp  SAMBridge.h  SAMVST.cpp  SAMVST.h  config.h
src/: sam.c
